--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Grocery</title><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<title>OG Food Hub</title><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 <style>
@@ -246,11 +246,13 @@ position: relative;
 padding-left: 30px;
 padding-right: 30px;}
 
+.last-1 p{margin-bottom: 20px;}
+
 .last-1 img{width: 45%;
 padding-top: 30px;
 padding-right: 20px;}
 
-.last-1 h1{padding-bottom: 9px;}
+.last-1 h1{padding-bottom: 10px;}
 
 .last-1::before{content: '';
 width: 2px;
@@ -261,13 +263,16 @@ right: 10px;
 top: 12px;}
    
 .last-2{display: flex;
-justify-content: center;}
+justify-content: center;
+position: relative;
+padding-left: 30px;
+padding-right: 30px;}
 
 .last-2 img{width: 45%;
 padding-top: 30px;
 padding-right: 20px;}
 
-.last-2 h1{padding-bottom: 9px;}
+.last-2 h1{padding-bottom: 10px;}
 
 #ending{margin-top: 50px;
 margin-bottom: 50px;
@@ -307,8 +312,8 @@ font-size: 14px;}
 @media screen and (max-width:1250px){
 *{margin:0px; padding:0px}
 
-#project{display:block;
-position:non-sticky}
+#project{display:flow;
+position: unset;}
 
 .menu ul li{justify-content:center;
 padding:8.5px;}
@@ -338,6 +343,9 @@ margin-bottom:8px}
 
 .last-text{display: block;}
 
+#last {margin: 20px;
+padding: 25px;}
+
 .ending-text{display: block;}
 
 .ending-1 ol li input{padding: 8px 40px 8px 2px;}
@@ -347,19 +355,20 @@ margin-bottom:8px}
 <section id="bgi">
 <section id="project">
 <div class="logo">
-<img src="logo-2.png"></img>
+    <a href="./OG Food Hub.html"><img src="./logo-2.png"></a>
+
 </div>
 <div class="menu">
 <ul>
-<li><a href="file:///C:/Users/lenovo/Desktop/me%20class/ADMISSION/Admission%20form%20new.html"><b>Home+</a></b></li>
-<li><a href="file:///C:/Users/lenovo/Desktop/me%20class/ADMISSION/Admission%20form%20new.html"><b>About+</a></b></li>
-<li><a href="file:///C:/Users/lenovo/Desktop/me%20class/ADMISSION/Admission%20form%20new.html"><b>Shop+</a></b></li>
-<li><a href="file:///C:/Users/lenovo/Desktop/me%20class/ADMISSION/Admission%20form%20new.html"><b>News+</a></b></li>
-<li><a href="file:///C:/Users/lenovo/Desktop/me%20class/ADMISSION/Admission%20form%20new.html"><b>Pages+</a></b></li>
-<li><button style=background-color:#90EE90><a href="file:///C:/Users/lenovo/Desktop/me%20class/ADMISSION/Admission%20form%20new.html">GET A QUOTE</a></button></li>
-<li><button><a href="file:///C:/Users/lenovo/Desktop/me%20class/ADMISSION/Admission%20form%20new.html"><i class="fas fa-search"></i></a></button></li>
-<li><button><a href="file:///C:/Users/lenovo/Desktop/me%20class/ADMISSION/Admission%20form%20new.html"><i class="fas fa-user"></i></a></button></li>
-<li><button><a href="file:///C:/Users/lenovo/Desktop/me%20class/ADMISSION/Admission%20form%20new.html"><i class="fas fa-cart-plus"></i></a></button></li>
+<li><a href="./OG Food Hub.html"><b>Home+</a></b></li>
+<li><a href="./OG Food Hub.html"><b>About+</a></b></li>
+<li><a href="./OG Food Hub.html"><b>Shop+</a></b></li>
+<li><a href="./OG Food Hub.html"><b>News+</a></b></li>
+<li><a href="./OG Food Hub.html"><b>Pages+</a></b></li>
+<li><button style=background-color:#90EE90><a href="./OG Food Hub.html">GET A QUOTE</a></button></li>
+<li><button><a href="./OG Food Hub.html"><i class="fas fa-search"></i></a></button></li>
+<li><button><a href="./OG Food Hub.html"><i class="fas fa-user"></i></a></button></li>
+<li><button><a href="./OG Food Hub.html"><i class="fas fa-cart-plus"></i></a></button></li>
 </ul>
 </div>
 </section>
@@ -570,7 +579,7 @@ margin-bottom:8px}
 </div>
 <div>
 <h1>Curated Products</h1>
-<p>Provide Curated <br>Products for all produts <br> over $100</p>
+<p>Provide Curated products for all produts over $100</p>
 </div>
 </div>
 <div class="last-1">
@@ -579,7 +588,7 @@ margin-bottom:8px}
 </div>
 <div>
 <h1>Handmade </h1>
-<p>We ensure the product <br> quality that is our main <br>goal</p>
+<p>We ensure the product quality that is our main goal</p>
 </div>
 </div>
 <div class="last-1">
@@ -588,7 +597,7 @@ margin-bottom:8px}
 </div>
 <div>
 <h1>Natural Food</h1>
-<p>Return Product within 3 <br> days for any Product you <br> buy</p>
+<p>Return Product within 3 days for any Product you buy</p>
 </div>
 </div>
 <div class="last-2">
@@ -597,7 +606,7 @@ margin-bottom:8px}
 </div>
 <div>
 <h1>Free Home Delivery</h1>
-<p>We ensure the product <br>quality that you can trust <br>easily</p>
+<p>We ensure the product quality that you can trust easily</p>
 </div>
 </div>
 </div>
@@ -611,10 +620,12 @@ margin-bottom:8px}
 <p><i class="fas fa-map-marker-alt"></i> &nbsp; Brooklyn, New York, United States</p>
 <p><i class="fas fa-phone"></i> &nbsp; +123-456789</p>
 <p><i class="fas fa-envelope"></i> &nbsp; example@example.com</p>
-<i class="fab fa-facebook-f"></i>
-<i class="fab fa-twitter"></i>
-<i class="fab fa-invision"></i>
-<i class="fab fa-youtube"></i>
+<a href="mailto:iharshitagarwal01.com" target="_blank"><i class="fas fa-envelope"></i></a>
+<a href="https://www.linkedin.com/in/harshit-agarwal-75ba41326/" target="_blank"><i class="fab fa-linkedin"></i></a>
+<a href="https://m.facebook.com/harshitindiangamer?_rdr" target="blank"><i class="fab fa-facebook-f"></i><a>
+<a href="https://www.youtube.com/@HARSHIT_I_GAMER/videos" target="blank"><i class="fab fa-youtube"></i></a>
+<a href="https://wa.link/wl6v49" target="blank"><i class="fab fa-whatsapp"></i></a>
+<a href="https://www.instagram.com/_.harshit_agarwal/?igshid=13exjbejwej0d" target="blank"><i class="fab fa-instagram"></i></a>
 </div>
 <div class="ending-1">
 <h1>Company</h1>
