--- a/index.html
+++ b/index.html
@@ -293,7 +293,8 @@ padding-bottom: 15px;}
 .ending-1 p{padding: 8px;}
 
 .ending-1 i{padding-top: 8px;
-padding-right: 8px;}
+padding-right: 8px;
+color: black;}
 
 .ending-1 i:hover{background-color: rgb(213, 188, 158);
 border-radius: 100px;
