--- a/index.html
+++ b/index.html
@@ -275,7 +275,6 @@ padding-right: 20px;}
 .last-2 h1{padding-bottom: 10px;}
 
 #ending{margin-top: 50px;
-margin-bottom: 50px;
 padding: 60px 35px;
 justify-content: center;
 justify-content: space-between;
@@ -307,6 +306,18 @@ font-size: 14px;}
 .ending-1 ol li img{width: 75%;}
 
 .ending-1 ol li input{padding: 8px 85px 8px 2px;}
+
+footer {
+    background: black;
+    color: #fff;
+    text-align: center;
+    padding: 1rem;
+    bottom: 0;
+}
+
+footer p{
+margin: 0px;
+}
 
 
 
@@ -672,5 +683,10 @@ padding: 25px;}
 </div>
 </div>
 </section>
+
+<footer>
+    <p>&copy; Made by HARSHIT. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
